@@ -4195,7 +4195,7 @@ int gui_exec_line (char *line,
     case PRINT:
     case SUMMARY:
     case MEANTEST: case VARTEST:
-    case RUNS: case SPEARMAN:
+    case RUNS: case SPEARMAN: case OUTFILE: case PCA:
 	err = simple_commands(&command, line, &Z, datainfo, &paths,
 			      0, oflag, prn);
 	if (err) errmsg(err, prn);
@@ -4847,7 +4847,15 @@ int gui_exec_line (char *line,
         break;
 
     case SHELL:
-	pprintf(prn, _("shell command not implemented in script mode\n"));
+	if (exec_code == CONSOLE_EXEC) {
+#ifdef G_OS_WIN32
+	    WinExec(line + 1, SW_SHOWNORMAL);
+#else	
+	    shell(line + 1);
+#endif
+	} else {
+	    pprintf(prn, _("shell command not implemented in script mode\n"));
+	}
 	break;
 
     case SIM:
