@@ -78,3 +78,7 @@ void matrix_print_corr (CORRMAT *corr, const DATAINFO *pdinfo,
 			int pause, PRN *prn);
 
 double gretl_median (const double *x, int n);
+
+int do_pca_from_corrmat (CORRMAT *corrmat, 
+			 double ***pZ, const DATAINFO *pdinfo,
+			 unsigned char oflag, PRN *prn);
