@@ -85,7 +85,9 @@ char *gretl_commands[] = {
     "omit",
     "omitfrom",
     "open",
+    "outfile",
     "panel",
+    "pca",
     "pergm",
     "plot",    
     "pooled",
