@@ -83,7 +83,9 @@ typedef enum {
     OMIT,
     OMITFROM,
     OPEN,
+    OUTFILE,
     PANEL,
+    PCA,
     PERGM,
     PLOT,    
     POOLED,
